# lotic

./: .gitignore  Jenkinsfile  README.md  backend_instance_setup.sh  initial_setup.sh
apis/: rpc_web_apis.md
tasks-backend/: .gitignore  README.md  __about__.py  alembic.ini  deploy.sh  pyproject.toml
tasks-backend/docs/: ARCHITECTURE.md
tasks-backend/docs/adl/: 0001.use-hatch-as-the-dependency-manager.md  0002.clean-architecture.md  0003.dto-translators.md  0004.maybe-struct.md  0005.domain-errors.md  0006.cqs-arch.md  adr-info.md  xxxx.adr-template.md
tasks-backend/features/: accounts.feature  auth.feature  create_tasks.feature  delete_tasks.feature  environment.py  list_account_tasks.feature  tasks.feature  tutorial.feature  tutorial.feature.ignore  tutorial.feature.ignored  update_tasks.feature
tasks-backend/features/steps/: accounts.py  auth.py  tasks.py  tutorial.py
tasks-backend/instance/: development.py  integration_logging.conf  integration_test.py  logging.conf
tasks-backend/migrations/versions/: 0bf1b940f9c9_initial.py  264a738682e6_initial_schema.py  5b2275442231_add_language_to_account_table.py  f489bcbffd57_add_position_table_to_tasks.py
tasks-backend/src/: app.py  utils.py
tasks-backend/src/application/: __init__.py  errors.py  shared.py
tasks-backend/src/application/accounts/: __init__.py  dto.py  usecases.py
tasks-backend/src/application/auth/: __init__.py  configurations.py  models.py  providers.py  shared.py  usecases.py
tasks-backend/src/application/example/: __init__.py  dto.py  usecases.py
tasks-backend/src/application/tasks/: __init__.py  dto.py  usecases.py
tasks-backend/src/domain/: __init__.py  errors.py  listoperations.py  shared.py
tasks-backend/src/infrastructure/: __init__.py  configurations.py  error_handlers.py  jsonutils.py  sharedadapters.py
tasks-backend/tests/: __init__.py  shared.py
tasks-backend/tests/application/: shared.py
tasks-backend/tests/domain/: shared.py
(+519 files in other folders)
