[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasks-server"
description = ''
readme = "README.md"
requires-python = ">=3.7"
keywords = []
authors = [
  { name = "rodrigorar", email = "rodrigo.ra.rosa@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/tasks-server#readme"
Issues = "https://github.com/unknown/tasks-server/issues"
Source = "https://github.com/unknown/tasks-server"

[tool.hatch.version]
path = "__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest==7.2.0",
  "pytest-cov==4.0.0",
  "pytest-mock==3.10.0",
  "flask==2.2.2",
  "flask-sqlalchemy==3.0.2",
  "behave==1.2.6",
  "mockito==1.4.0",
  "python-dateutil==2.8.2"
]
[tool.hatch.envs.default.scripts]
unit-tests = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=tasks_server --cov=tests {args}"
unit-tests-no-cov = "test --no-cov {args}"
integration-tests = "APP_CONFIG_FILE=integration_test.py behave"
tests = "hatch run unit-tests && hatch run integration-tests"
server = "APP_CONFIG_FILE=development.py flask --app src/app run"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
